--- a/DDQN.ipynb
+++ b/DDQN.ipynb
@@ -12,6 +12,80 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Whether bumble bee do mental 3D constructions to achieve the visual-tactile crossmodal recognition? \n",
+        "An investigation into a biomimic framework that learns latent representation for crossmodal 3D reconstruction RL-tasks via active visual/tactile exploration \n",
+        "\n",
+        "Zekai Xu, Fengzhe Zhang - \n",
+        "Imperial College London"
+      ],
+      "metadata": {
+        "id": "E1M-SABzWb14"
+      },
+      "id": "E1M-SABzWb14"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Drive Mount\n",
+        "Repository from Github: git clone https://github.com/facebookresearch/Active-3D-Vision-and-Touch.git"
+      ],
+      "metadata": {
+        "id": "sk5zbD1_0BJ7"
+      },
+      "id": "sk5zbD1_0BJ7"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odgbHMGrDIX1",
+        "outputId": "b80bc327-7b81-4df1-d00e-63b1710a2e58"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ],
+      "id": "odgbHMGrDIX1"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd gdrive/MyDrive/Active-3D-Vision-and-Touch/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qry35Uw5DVex",
+        "outputId": "0ae9110a-9bb6-4776-9bba-6dd2e6d46d99"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/gdrive/MyDrive/Active-3D-Vision-and-Touch\n"
+          ]
+        }
+      ],
+      "id": "qry35Uw5DVex"
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "W-LUPBlMCMl3"
       },
@@ -496,66 +570,6 @@
             "tar: images_colourful: Cannot change mode to rwxrwxr-x: Transport endpoint is not connected\n",
             "tar: Error is not recoverable: exiting now\n",
             "download_data.sh: error reading input file: Transport endpoint is not connected\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Drive Mount\n",
-        "Repository from Github: git clone https://github.com/facebookresearch/Active-3D-Vision-and-Touch.git"
-      ],
-      "metadata": {
-        "id": "sk5zbD1_0BJ7"
-      },
-      "id": "sk5zbD1_0BJ7"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "odgbHMGrDIX1",
-        "outputId": "b80bc327-7b81-4df1-d00e-63b1710a2e58"
-      },
-      "id": "odgbHMGrDIX1",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%cd gdrive/MyDrive/Active-3D-Vision-and-Touch/"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qry35Uw5DVex",
-        "outputId": "0ae9110a-9bb6-4776-9bba-6dd2e6d46d99"
-      },
-      "id": "qry35Uw5DVex",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/gdrive/MyDrive/Active-3D-Vision-and-Touch\n"
           ]
         }
       ]
